--- a/package.json
+++ b/package.json
@@ -25,6 +25,15 @@
         "test": "./tests/"
     },
     "scripts": {},
-    "dependencies": {},
-    "devDependencies": {}
+    "devDependencies": {
+        "@types/node": "^20.9.2",
+        "@typescript-eslint/eslint-plugin": "^6.11.0",
+        "@typescript-eslint/parser": "^6.11.0",
+        "eslint": "^8.54.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-tsdoc": "^0.2.17",
+        "tsx": "^4.1.3",
+        "typescript": "^5.2.2"
+    }
 }
