--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "scripts": {},
     "devDependencies": {
         "@types/node": "^20.9.2",
+        "@types/node-fetch": "^2.6.9",
+        "@types/yargs": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
         "eslint": "^8.54.0",
@@ -35,5 +37,9 @@
         "eslint-plugin-tsdoc": "^0.2.17",
         "tsx": "^4.1.3",
         "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "node-fetch": "^3.3.2",
+        "yargs": "^17.7.2"
     }
 }
