--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     },
     "devDependencies": {
         "@types/node": "^20.9.2",
-        "@types/node-fetch": "^2.6.9",
         "@types/yargs": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
@@ -58,7 +57,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
-        "node-fetch": "^3.3.2",
+        "axios": "^1.6.2",
         "yargs": "^17.7.2"
     }
 }
