--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.9.2",
+        "@types/uuid": "9.0.7",
         "@types/yargs": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
@@ -58,6 +59,7 @@
     },
     "dependencies": {
         "axios": "^1.6.2",
+        "uuid": "^9.0.1",
         "yargs": "^17.7.2"
     }
 }
