--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-tsdoc": "^0.2.17",
+        "husky": "8.0.3",
         "rimraf": "^5.0.5",
         "tsx": "^4.1.3",
         "typescript": "^5.2.2"
