Added a few more ESLint scripts.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "prepare": "husky install",
         "dev": "tsx ./src/cli.ts",
         "lint": "eslint --ext .ts ./src/",
+        "lint:cache": "npm run lint -- --cache",
         "lint:fix": "npm run lint -- --fix",
+        "lint:cache:fix": "npm run lint:cache -- --fix",
         "test": "echo 'No tests (yet)!' && exit 1",
         "prepublishOnly": "npm run rebuild",
         "build": "npm run build:all",
