--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-tsdoc": "^0.2.17",
         "husky": "8.0.3",
+        "pkg": "5.8.1",
         "rimraf": "^5.0.5",
         "tsx": "^4.1.3",
         "typescript": "^5.2.2"
