--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
         "@types/yargs": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
+        "@yao-pkg/pkg": "5.10.0",
         "eslint": "^8.54.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-tsdoc": "^0.2.17",
         "husky": "8.0.3",
-        "pkg": "5.8.1",
         "rimraf": "^5.0.5",
         "tsx": "^4.1.3",
         "typescript": "^5.2.2"
