Suggest some VSCode extensions for GitHub stuff.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
     "recommendations": [
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+        "github.vscode-pull-request-github",
+        "github.remotehub",
+        "github.vscode-github-actions"
     ]
 }
