Added acknowledgements for bug reports.

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -53,3 +53,12 @@ body:
       description: Any extra information you think would be helpful.
     validations:
       required: false
+  - id: acknowledgement
+    type: checkboxes
+    attributes:
+      label: "I acknowledge that:"
+      options:
+        - label: I have searched for similar issues and found none.
+          required: true
+    validations:
+      required: true
