--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "lint:cache": "npm run lint -- --cache",
         "lint:fix": "npm run lint -- --fix",
         "lint:cache:fix": "npm run lint:cache -- --fix",
-        "test": "echo 'No tests (yet)!' && exit 0",
+        "test": "mocha",
         "prepublishOnly": "npm run rebuild",
         "build": "npm run build:all",
         "build:all": "npm run build:lib && npm run build:types",
@@ -53,18 +53,28 @@
         "rebuild:types": "npm run clean:types && npm run build:types"
     },
     "devDependencies": {
+        "@istanbuljs/nyc-config-typescript": "1.0.2",
+        "@types/chai": "4.3.11",
+        "@types/mocha": "10.0.6",
         "@types/node": "^20.9.2",
+        "@types/sinon": "17.0.2",
+        "@types/sinon-chai": "3.2.12",
         "@types/uuid": "9.0.7",
         "@types/yargs": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
         "@yao-pkg/pkg": "5.10.0",
+        "chai": "4.3.10",
         "eslint": "^8.54.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-tsdoc": "^0.2.17",
         "husky": "8.0.3",
+        "mocha": "10.2.0",
+        "nyc": "15.1.0",
         "rimraf": "^5.0.5",
+        "sinon": "17.0.1",
+        "sinon-chai": "3.7.0",
         "tsx": "^4.1.3",
         "typescript": "^5.2.2"
     },
