Adjusted nyc config.

--- a/.nycrc
+++ b/.nycrc
@@ -1,6 +1,9 @@
 {
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
+    "reporter": [
+        "text"
+    ],
     "include": [
         "**/src/helpers/**"
     ],
@@ -10,5 +13,6 @@
         "**/*.js",
         "**/*.d.ts",
         "**/index.ts"
-    ]
+    ],
+    "clean": true
 }
