Some more package scripts.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
         "lint:fix": "npm run lint -- --fix",
         "lint:cache:fix": "npm run lint:cache -- --fix",
         "test": "mocha",
+        "test:ci": "npm run coverage",
+        "coverage": "nyc npm run test",
+        "coverage:report": "nyc report",
+        "coverage:report:html": "npm run coverage:report -- --reporter=html --report-dir=coverage",
         "prepublishOnly": "npm run rebuild",
         "build": "npm run build:all",
         "build:all": "npm run build:lib && npm run build:types",
