--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "github.vscode-pull-request-github",
         "github.remotehub",
         "github.vscode-github-actions",
-        "maty.vscode-mocha-sidebar"
+        "maty.vscode-mocha-sidebar",
+        "github.vscode-codeql"
     ]
 }
