--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "rebuild:types": "npm run clean:types && npm run build:types"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.3.1",
         "@istanbuljs/nyc-config-typescript": "1.0.2",
         "@types/chai": "4.3.11",
         "@types/mocha": "10.0.6",
