--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,8 +3,6 @@
         "dbaeumer.vscode-eslint",
         "github.vscode-pull-request-github",
         "github.remotehub",
-        "github.vscode-github-actions",
-        "github.vscode-codeql",
-        "hbenl.vscode-mocha-test-adapter"
+        "github.vscode-github-actions"
     ]
 }
