Reduced the number of lint scripts.
It was silly.

--- a/package.json
+++ b/package.json
@@ -29,23 +29,8 @@
     "scripts": {
         "prepare": "husky install",
         "dev": "tsx ./src/ftb-tool.ts",
-        "lint": "npm run lint:all:cache",
-        "lint:ci": "npm run lint:all",
-        "lint:fix": "npm run lint:all:fix",
-        "lint:cache": "npm run lint:all:cache",
-        "lint:fix:cache": "npm run lint:all:fix:cache",
-        "lint:all": "npm run lint:src && npm run lint:tests",
-        "lint:all:cache": "npm run lint:src:cache && npm run lint:tests:cache",
-        "lint:all:fix": "npm run lint:src:fix && npm run lint:tests:fix",
-        "lint:all:fix:cache": "npm run lint:src:fix:cache && npm run lint:tests:fix:cache",
-        "lint:src": "eslint --ext .ts ./src/",
-        "lint:tests": "eslint --ext .ts ./tests/",
-        "lint:src:cache": "npm run lint:src -- --cache",
-        "lint:tests:cache": "npm run lint:tests -- --cache",
-        "lint:src:fix": "npm run lint:src -- --fix",
-        "lint:tests:fix": "npm run lint:tests -- --fix",
-        "lint:src:fix:cache": "npm run lint:src:fix -- --cache",
-        "lint:tests:fix:cache": "npm run lint:tests:fix -- --cache",
+        "lint": "eslint --ext .ts  --cache ./src/ ./tests/",
+        "lint:ci": "eslint --ext .ts ./src/ ./tests/",
         "test": "mocha",
         "test:ci": "npm run coverage",
         "coverage": "nyc npm run test",
