--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@faker-js/faker": "^8.3.1",
         "@istanbuljs/nyc-config-typescript": "1.0.2",
         "@types/chai": "4.3.11",
+        "@types/lodash": "4.14.202",
         "@types/mocha": "10.0.6",
         "@types/node": "^20.9.2",
         "@types/sinon": "17.0.2",
@@ -83,6 +84,7 @@
     },
     "dependencies": {
         "axios": "^1.6.2",
+        "lodash": "4.17.21",
         "uuid": "^9.0.1",
         "yargs": "^17.7.2"
     }
