--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "devDependencies": {
         "@faker-js/faker": "^8.3.1",
         "@istanbuljs/nyc-config-typescript": "1.0.2",
+        "@types/archiver": "6.0.2",
         "@types/chai": "4.3.11",
         "@types/lodash": "4.14.202",
         "@types/mocha": "10.0.6",
@@ -83,6 +84,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "archiver": "6.0.1",
         "axios": "^1.6.2",
         "lodash": "4.17.21",
         "uuid": "^9.0.1",
