Explicitly target NodeJS v19.8.1

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "bin": {
         "ftb-tool": "./lib/ftb-tool.js"
     },
+    "engines": {
+        "node": "19.8.1",
+        "npm": ">=9.6.7"
+    },
     "directories": {
         "doc": "./docs/",
         "lib": "./lib/",
