--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "ftb-tool": "./lib/ftb-tool.js"
     },
     "engines": {
-        "node": "19.8.1",
-        "npm": ">=9.6.7"
+        "node": "20.10.0",
+        "npm": ">=10.2.3"
     },
     "directories": {
         "doc": "./docs/",
@@ -59,39 +59,39 @@
         "rebuild:types": "npm run clean:types && npm run build:types"
     },
     "devDependencies": {
-        "@faker-js/faker": "^8.3.1",
+        "@faker-js/faker": "8.3.1",
         "@istanbuljs/nyc-config-typescript": "1.0.2",
         "@types/archiver": "6.0.2",
         "@types/chai": "4.3.11",
         "@types/lodash": "4.14.202",
         "@types/mocha": "10.0.6",
-        "@types/node": "^20.9.2",
+        "@types/node": "20.10.3",
         "@types/sinon": "17.0.2",
         "@types/sinon-chai": "3.2.12",
         "@types/uuid": "9.0.7",
-        "@types/yargs": "^17.0.31",
-        "@typescript-eslint/eslint-plugin": "^6.11.0",
-        "@typescript-eslint/parser": "^6.11.0",
-        "@yao-pkg/pkg": "5.10.0",
+        "@types/yargs": "17.0.32",
+        "@typescript-eslint/eslint-plugin": "6.13.2",
+        "@typescript-eslint/parser": "6.13.2",
+        "@yao-pkg/pkg": "5.11.0",
         "chai": "4.3.10",
-        "eslint": "^8.54.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-tsdoc": "^0.2.17",
+        "eslint": "8.55.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-prettier": "5.0.1",
+        "eslint-plugin-tsdoc": "0.2.17",
         "husky": "8.0.3",
         "mocha": "10.2.0",
         "nyc": "15.1.0",
-        "rimraf": "^5.0.5",
+        "rimraf": "5.0.5",
         "sinon": "17.0.1",
         "sinon-chai": "3.7.0",
-        "tsx": "^4.1.3",
-        "typescript": "^5.2.2"
+        "tsx": "4.6.2",
+        "typescript": "5.3.2"
     },
     "dependencies": {
         "archiver": "6.0.1",
-        "axios": "^1.6.2",
+        "axios": "1.6.2",
         "lodash": "4.17.21",
-        "uuid": "^9.0.1",
-        "yargs": "^17.7.2"
+        "uuid": "9.0.1",
+        "yargs": "17.7.2"
     }
 }
