--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
         name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: v20.10.0
           cache: npm
       - id: npm-install
         name: Run "npm install"
@@ -53,7 +53,7 @@ jobs:
         name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: v20.10.0
           cache: npm
       - id: npm-install
         name: Run "npm install"
