--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: v20.10.0
           cache: npm
       - id: npm-install
         name: Run "npm install"
@@ -55,7 +55,7 @@ jobs:
         name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: v20.10.0
           cache: npm
       - id: npm-install
         name: Run "npm install"
