--- a/package.json
+++ b/package.json
@@ -90,10 +90,10 @@
         "typescript": "5.3.2"
     },
     "dependencies": {
-        "archiver": "6.0.1",
-        "axios": "1.6.3",
-        "lodash": "4.17.21",
-        "uuid": "9.0.1",
-        "yargs": "17.7.2"
+        "archiver": "^6.0.1",
+        "axios": "^1.6.3",
+        "lodash": "^4.17.21",
+        "uuid": "^9.0.1",
+        "yargs": "^17.7.2"
     }
 }
