--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "husky": "^8.0.3",
         "mocha": "^10.2.0",
         "nyc": "^15.1.0",
+        "prettier-eslint": "^16.3.0",
         "rimraf": "^5.0.5",
         "sinon": "^17.0.1",
         "sinon-chai": "^3.7.0",
