Did some fleshing out of main.

--- a/deno.json
+++ b/deno.json
@@ -39,7 +39,9 @@
     },
     "lock": true,
     "nodeModulesDir": true,
-    "tasks": {},
+    "tasks": {
+        "dev": "deno run --allow-read --allow-env ./src/main.ts"
+    },
     "test": {
         "include": [
             "./tests/*.spec.ts",
